HW4/javali_tests/failed/OkSimpleReturnWithExpression.javali.err
Debug information for file: javali_tests/failed/OkSimpleReturnWithExpression.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [a, b], argumentTypes: [int, int], name: m, returnType: int)
| | Seq ()
| | Seq ()
| | | ReturnStmt ()
| | | | BinaryOp (operator: B_PLUS)
| | | | | BinaryOp (operator: B_PLUS)
| | | | | | Var (name: a)
| | | | | | Var (name: b)
| | | | | IntConst (value: 1)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | | VarDecl (name: a, type: int)
| | | VarDecl (name: res, type: int)
| | Seq ()
| | | Assign ()
| | | | Var (name: res)
| | | | UnaryOp (operator: U_MINUS)
| | | | | IntConst (value: 1)
| | | Assign ()
| | | | Var (name: res)
| | | | MethodCallExpr (methodName: m)
| | | | | ThisRef ()
| | | | | Var (name: a)
| | | | | Var (name: a)
| | | BuiltInWrite ()
| | | | Var (name: res)
| | | BuiltInWriteln ()
| | | Assign ()
| | | | Var (name: res)
| | | | MethodCallExpr (methodName: m)
| | | | | ThisRef ()
| | | | | IntConst (value: 1)
| | | | | IntConst (value: 2)
| | | BuiltInWrite ()
| | | | Var (name: res)
| | | BuiltInWriteln ()
| | | BuiltInWrite ()
| | | | MethodCallExpr (methodName: m)
| | | | | ThisRef ()
| | | | | IntConst (value: 1)
| | | | | IntConst (value: 2)
| | | BuiltInWriteln ()
| | | BuiltInWrite ()
| | | | MethodCallExpr (methodName: m)
| | | | | ThisRef ()
| | | | | IntConst (value: 1)
| | | | | IntConst (value: 2)
| | | BuiltInWriteln ()
Binary Op: ((a + b))@2d5c3535 (%edx,%esi)
Binary Op: (((a + b) + 1))@5d47555c (%esi,%ecx)

Phase exec failed because we expected to see:
1
4
4
4

But we actually saw:
Error: 139

The difference is:
At line   1 /   1:
< 1
< 4
< 4
< 4
> Error: 139

